# acidwarp

./: .gitignore  README.md
acidwarp/: CMakeLists.txt  Makefile  acidwarp.c  bit_map.c  effects_rgb.c  effects_rgb.h  handy.h  lut.c  lut.h  palinit.c  renderer_gl.c  renderer_gl.h  rolnfade.c  rolnfade.h  warp_text.h
acidwarp.web/: .gitignore  README.md  acidwarp.c  build-prod.sh  build.sh  index.html  index.js  index.wasm  shell.html
acidwarp/shaders/: julia.frag  mandelbrot.frag
